update navbar container

--- a/index.html
+++ b/index.html
@@ -16,27 +16,30 @@
 
 <body>
     <nav class="navbar">
-        <div class="logo">
-            <img src="./resources/Chatapp.svg" alt="">
-        </div>
-
-        <ul class="links">
-            <a class="link" href="#">Products</a>
-            <a class="link" href="#">Services</a>
-            <a class="link" href="#">Contact</a>
-            <a class="link" href="#">Log In</a>
-            <a class="nav-btn" href="#">Free trial</a>
-        </ul>
-        <div class="topnav" id="topNav">
-            <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
-            <div class="overlay-content">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Products</a>
-                <a href="#">Contact</a>
+        <div class="container">
+            <div class="logo">
+                <img src="./resources/Chatapp.svg" alt="">
             </div>
+
+            <ul class="links">
+                <a class="link" href="#">Products</a>
+                <a class="link" href="#">Services</a>
+                <a class="link" href="#">Contact</a>
+                <a class="link" href="#">Log In</a>
+                <a class="nav-btn" href="#">Free trial</a>
+            </ul>
+            <div class="topnav" id="topNav">
+                <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
+                <div class="overlay-content">
+                    <a href="#">Products</a>
+                    <a href="#">Services</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Log In</a>
+                    <a class="nav-btn" href="#">Free trial</a>
+                </div>
+            </div>
+            <span class="hamburger" onclick="openNav()">&#9776;</span>
         </div>
-        <span class="hamburger" onclick="openNav()">&#9776;</span>
     </nav>
     <section class="hero-section">
         <div class="container home-cont">
